# ShapeVariationAnalyzer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  SuperBuild.cmake  requirements.txt
CLI/ComputeMeanShapes/: CMakeLists.txt  README.md  computeMean.cxx  computeMean.h  computeMean.hxx  computeMean.xml  fileIO.hxx
CLI/SurfaceFeaturesExtractor/: CMakeLists.txt  surfacefeaturesextractor.cxx  surfacefeaturesextractor.h  surfacefeaturesextractor.hxx  surfacefeaturesextractor.xml
Classification/: Classification.py  inputData.py  neuralNetwork.py
Classification/Resources/UI/: Classification.ui  Classification2.ui
ShapeVariationAnalyzer/: CMakeLists.txt  ShapeVariationAnalyzer.py  evalShape.xml  generation_shapes.py  inputData.py  principal_nested_spheres.py  shapca  shapca.py  shapca.xml  shapepca  shapepca.py  shapepca.xml  shapepcalib.py  testDict.py  trainNeuralNetwork.xml
ShapeVariationAnalyzer/Data/Input/: g01_bent00.vtk  g01_bent01.vtk  g01_bent02.vtk  g01_bent03.vtk  g01_bent04.vtk  g01_bent05.vtk  g01_bent06.vtk  g01_bent07.vtk  g01_bent08.vtk  g01_bent09.vtk  test.csv
ShapeVariationAnalyzer/Resources/Classifier/: ML_algorithms.py  evalShape.py  generation_shapes.py  neuralNetwork.py  trainNeuralNetwork.py
ShapeVariationAnalyzer/Resources/PowerShell/: install-SVA-deps.ps1
ShapeVariationAnalyzer/Resources/PowerShell/windows/: install-python.ps1
ShapeVariationAnalyzer/Resources/UI/: ShapeVariationAnalyzer.ui
ShapeVariationAnalyzer/Testing/: CMakeLists.txt  test-tensorflowinstall.py
ShapeVariationAnalyzer/Wrapper/: envTensorFlowWrapper.py
ShapeVariationAnalyzer/cpns/: cpns.py  pns_utils.py  principal_nested_spheres.py
ShapeVariationAnalyzerSampleData/: CMakeLists.txt  ShapeVariationAnalyzerSampleData.py
SuperBuild/: External_python-ShapeVariationAnalyzer-requirements.cmake
doc/ResearchUpdate/: LSTM-Network.pptx
doc/spie_abstract/: 2018SPIE-SVA_Poster.pptx  article.tex  report.bib  spie.cls
src/: CMakeLists.txt
src/CLI/SurfaceFeaturesExtractor/: CMakeLists.txt  README.md
src/CLI/SurfaceFeaturesExtractor/src/: CMakeLists.txt
src/CLI/SurfaceFeaturesExtractor/src/ComputeMeanShapes/: CMakeLists.txt
src/CLI/SurfaceFeaturesExtractor/src/ComputeMeanShapes/src/: CMakeLists.txt  computeMean.cxx  computeMean.h
src/CLI/SurfaceFeaturesExtractor/src/SurfaceFeaturesExtractor/: CMakeLists.txt  fileIO.h  surfacefeaturesextractor.xml
src/Classification/: CMakeLists.txt  Classification.py  inputData.py  neuralNetwork.py
src/Classification/Resources/: evalCondylesClassification.py  neuralNetwork.py  trainCondylesClassification.py
src/Classification/Resources/UI/: Classification.ui
src/Classification/Testing/: test-tensorflowinstall.py
src/ShapeVariationAnalyzer/: CMakeLists.txt  ShapeVariationAnalyzer.py  evalShape  evalShape.xml  inputData.py  trainNeuralNetwork  trainNeuralNetwork.xml
src/ShapeVariationAnalyzer/Resources/: neuralNetwork.py
src/ShapeVariationAnalyzer/Resources/Classifier/: evalShape.py  neuralNetwork.py  trainNeuralNetwork.py
src/ShapeVariationAnalyzer/Resources/PowerShell/: install-SVA-deps.ps1
src/ShapeVariationAnalyzer/Resources/PowerShell/windows/: install-python.ps1
src/ShapeVariationAnalyzer/Resources/UI/: ShapeVariationAnalyzer.ui
src/ShapeVariationAnalyzer/Testing/: test-tensorflowinstall.py
src/ShapeVariationAnalyzer/Wrapper/: envTensorFlowWrapper.py
src/matlab/: RunTime.m
src/py/fitlib/: condyle_fitting.py  condyle_pca_decomposition.py  condyle_pca_decomposition.py~  mean.vtk  model.pickle
src/py/generatelib/: add_heatkernel_vtk.py  generate_polys.py  generation_shapes.py  inputData.py  pickleData.py
src/py/icosahedronlib/: subdivisiontest.py
src/py/trainlib/: evaluation.py  neuralNetwork.py  norm_nn.py  norm_train.py  prediction.py  regularization_eval.py  regularization_nn.py  regularization_predict.py  regularization_train.py  train.py
