
file(
	GLOB
	source_files
	*.[ch]pp
	*.[ch]xx
	*.[ch]
)


set(INSTALL_RUNTIME_DESTINATION ${SlicerExecutionModel_DEFAULT_CLI_INSTALL_RUNTIME_DESTINATION}/../hidden-cli-modules)
set(INSTALL_LIBRARY_DESTINATION ${SlicerExecutionModel_DEFAULT_CLI_INSTALL_RUNTIME_DESTINATION}/../hidden-cli-modules)
set(INSTALL_ARCHIVE_DESTINATION ${SlicerExecutionModel_DEFAULT_CLI_INSTALL_RUNTIME_DESTINATION}/../hidden-cli-modules)

SEMMacroBuildCLI(
		NAME surfacefeaturesextractor
		ADDITIONAL_SRCS ${source_files}
		EXECUTABLE_ONLY
		TARGET_LIBRARIES ${ITK_LIBRARIES} ${VTK_LIBRARIES}
        INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR} 
        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
        LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
        ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}
        INSTALL_RUNTIME_DESTINATION ${INSTALL_RUNTIME_DESTINATION}
        INSTALL_LIBRARY_DESTINATION ${INSTALL_LIBRARY_DESTINATION}
        INSTALL_ARCHIVE_DESTINATION ${INSTALL_ARCHIVE_DESTINATION}
)
if(NOT WIN32)
	install(TARGETS surfacefeaturesextractor RUNTIME DESTINATION ${INSTALL_RUNTIME_DESTINATION})
endif()